package com.liyi.design.pattern.structure.bridge;

public abstract class Brand {

    abstract void close();

    abstract void open();
}
